--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 body {
   background-color: #2c343c;
   color: white;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
 }
